# bellybot

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
inc/: coinbase_websocket.h  kraken_websocket.h  load_env.h  price_fetcher.h
src/: coinbase_websocket.cpp  kraken_websocket.cpp  load_env.cpp  main.cpp  price_fetcher.cpp
